[tool.poetry]
name = "portfolio-tracker"
version = "0.1.0"
description = "Track your mutual-fund portfolio performance history"
authors = ["rattle99 <24495512+rattle99@users.noreply.github.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.21.3"
pandas = "^1.3.4"
casparser = "^0.5.3"
autopep8 = "^1.6.0"
bokeh = "^2.4.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
